SSDM-12359: add JVM options '--add-opens' for DSS start up command